--- a/firewall/po/es/untangle-node-firewall.po
+++ b/firewall/po/es/untangle-node-firewall.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:22-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-22 06:51-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,11 +55,11 @@ msgstr "Descripción"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:182
 msgid "Warning"
-msgstr ""
+msgstr "Atención"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:182
 msgid "The form is not valid!"
-msgstr ""
+msgstr "¡El formulario no es válido!"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:193
 msgid "Enable Rule"
