--- a/firewall/po/pt_BR/untangle-node-firewall.po
+++ b/firewall/po/pt_BR/untangle-node-firewall.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:52-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-23 19:27-0800\n"
+"Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,11 +55,11 @@ msgstr "Descrição"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:182
 msgid "Warning"
-msgstr ""
+msgstr "Aviso"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:182
 msgid "The form is not valid!"
-msgstr ""
+msgstr "A forma não é válida!"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:193
 msgid "Enable Rule"
