--- a/mail-casing/po/es/untangle-casing-mail.po
+++ b/mail-casing/po/es/untangle-casing-mail.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:19-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-22 06:23-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -113,7 +113,6 @@ msgid "Showing items {0} - {1} of {2}"
 msgstr "Mostrando los elementos {0} - {1} de {2}"
 
 #: ../servlets/quarantine/root/quarantine.js:503
-#, fuzzy
 msgid "No messages to display"
 msgstr "No hay mensajes para mostrar"
 
