--- a/mail-casing/po/pt_BR/untangle-casing-mail.po
+++ b/mail-casing/po/pt_BR/untangle-casing-mail.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:49-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-23 20:15-0800\n"
+"Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,7 +50,7 @@ msgstr "Liberada uma mensagem"
 
 #: ../servlets/quarantine/root/quarantine.js:292
 msgid "Released {0} Messages"
-msgstr "Liberada {0} mensagens"
+msgstr "Liberadas {0} mensagens"
 
 #: ../servlets/quarantine/root/quarantine.js:298
 msgid "Safelisted one Address"
@@ -113,7 +113,6 @@ msgid "Showing items {0} - {1} of {2}"
 msgstr "Mostrando itens {0} - {1} de {2}"
 
 #: ../servlets/quarantine/root/quarantine.js:503
-#, fuzzy
 msgid "No messages to display"
 msgstr "Nenhuma mensagem a exibir"
 
@@ -159,7 +158,7 @@ msgstr "Endereço"
 
 #: ../servlets/quarantine/root/remaps.js:138
 msgid "Received Quarantined Messages From:"
-msgstr "Recebidas mensagens em quarentena de:"
+msgstr "Mensagens em quarentena recebidas de:"
 
 #: ../servlets/quarantine/root/remaps.js:157
 msgid "Forward or Receive Quarantines"
