--- a/openvpn/po/es/untangle-node-openvpn.po
+++ b/openvpn/po/es/untangle-node-openvpn.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:23-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-23 07:32-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -287,9 +287,8 @@ msgid "end time"
 msgstr "hora de finalización"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:673
-#, fuzzy
 msgid "active connection"
-msgstr "Sesiones activas"
+msgstr "conexión activa"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:679
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:831
@@ -301,14 +300,12 @@ msgid "client address"
 msgstr "dirección del cliente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:689
-#, fuzzy
 msgid "KB sent"
-msgstr "kilobytes enviados"
+msgstr "KB enviados"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:697
-#, fuzzy
 msgid "KB received"
-msgstr "kilobytes recibidos"
+msgstr "KB recibidos"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:712
 msgid "distribute"
@@ -590,7 +587,7 @@ msgstr "Debe escribir el nombre de su organización."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:1918
 msgid "You must fill out the name of your state."
-msgstr "Debe escribir el nombre de su estado."
+msgstr "Debe escribir el nombre de su estado, región o provincia."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:1922
 msgid "You must fill out the name of your locality."
@@ -671,11 +668,11 @@ msgstr "CONECTAR"
 
 #: ../impl/com/untangle/node/openvpn/Sandbox.java:250
 msgid "default"
-msgstr ""
+msgstr "predeterminado"
 
 #: ../impl/com/untangle/node/openvpn/Sandbox.java:305
 msgid "internal network"
-msgstr ""
+msgstr "red interna"
 
 #~ msgid ""
 #~ "If necessary, you can change the configuration of OpenVPN by launching "
