--- a/openvpn/po/pt_BR/untangle-node-openvpn.po
+++ b/openvpn/po/pt_BR/untangle-node-openvpn.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:52-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-23 23:52-0800\n"
+"Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -83,7 +83,7 @@ msgstr "Clique em \"Enviar e-mail\" para enviar um e-mail para \"Endereço de e-
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:120
 msgid "Email Address"
-msgstr "Endereo de e-mail"
+msgstr "Endereço de e-mail"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:126
 msgid "Send Email"
@@ -240,7 +240,7 @@ msgstr "Um nome de cliente deve somente conter números, letras, traços e ponto
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:530
 msgid "Unconfigured: Use buttons below."
-msgstr "Não configurado: use os botões abaixo."
+msgstr "Não configurado: use os botões abaixo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:532
 msgid "VPN Client: Connected to {0}"
@@ -269,7 +269,7 @@ msgstr "Configurar como Servidor VPN"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:588
 msgid "This configures OpenVPN so remote users and networks can connect and access exported hosts and networks."
-msgstr "Isto configura OpenVPN de forma que os usuários e redes remotos possam conectar e acessar redes e hosts exportados."
+msgstr "Esse configura o OpenVPN de forma que os usuários e redes remotos possam conectar e acessar redes e hosts exportados."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:595
 msgid "Configure as VPN Client"
@@ -277,7 +277,7 @@ msgstr "Configurar como Cliente VPN"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:606
 msgid "This configures OpenVPN so it connects to a remote OpenVPN Server and can access exported hosts and networks."
-msgstr "Isto configura OpenVPN de forma que se conecta a um Servidor OpenVPN remoto e pode acessar redes e hosts exportados."
+msgstr "Esse configura o OpenVPN de forma a se conectar a um Servidor OpenVPN remoto e pode acessar redes e hosts exportados."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:659
 msgid "start time"
@@ -288,9 +288,8 @@ msgid "end time"
 msgstr "hora final"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:673
-#, fuzzy
 msgid "active connection"
-msgstr "Sessões ativas"
+msgstr "conexão ativa"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:679
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:831
@@ -302,14 +301,12 @@ msgid "client address"
 msgstr "endereço do cliente"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:689
-#, fuzzy
 msgid "KB sent"
-msgstr "Kbytes enviados"
+msgstr "KB enviados"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:697
-#, fuzzy
 msgid "KB received"
-msgstr "Kbytes recebidos"
+msgstr "KB recebidos"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:712
 msgid "distribute"
@@ -550,7 +547,7 @@ msgstr "Aviso do Assistente de Configuração"
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:1787
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:2055
 msgid "You have not finished configuring OpenVPN. Please run the Setup Wizard again."
-msgstr "Você não terminou a configuração do OpenVPN. Execute novamente o Assistente de Configuração"
+msgstr "Você não terminou a configuração do OpenVPN. Execute novamente o Assistente de Configuração."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-openvpn/settings.js:1813
 msgid "This wizard will help guide you through your initial setup and configuration of OpenVPN as a VPN Routing Server."
@@ -672,11 +669,11 @@ msgstr "CONECTAR"
 
 #: ../impl/com/untangle/node/openvpn/Sandbox.java:250
 msgid "default"
-msgstr ""
+msgstr "padrão"
 
 #: ../impl/com/untangle/node/openvpn/Sandbox.java:305
 msgid "internal network"
-msgstr ""
+msgstr "rede interna"
 
 #~ msgid ""
 #~ "If necessary, you can change the configuration of OpenVPN by launching "
