--- a/reporting/po/pt_BR/untangle-node-reporting.po
+++ b/reporting/po/pt_BR/untangle-node-reporting.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-04 11:30-0800\n"
-"PO-Revision-Date: 2008-11-13 08:46-0800\n"
+"PO-Revision-Date: 2008-11-23 23:57-0800\n"
 "Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
@@ -50,7 +50,7 @@ msgstr "endereço de e-mail"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:216
 msgid "The email address cannot be blank."
-msgstr "The endereço de e-mail não pode ficar em branco."
+msgstr "O endereço de e-mail não pode ficar em branco."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:233
 msgid "Include {0}Incident Reports{1} in emailed reports"
