--- a/shield/po/es/untangle-node-shield.po
+++ b/shield/po/es/untangle-node-shield.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-20 05:46-0700\n"
+"PO-Revision-Date: 2008-11-23 07:37-0700\n"
 "Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
@@ -53,7 +53,7 @@ msgstr "usuarios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:61
 msgid "unlimited"
-msgstr "ilimitado"
+msgstr "Sin límite"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:74
 msgid "[no description]"
