--- a/spyware/po/pt_BR/untangle-node-spyware.po
+++ b/spyware/po/pt_BR/untangle-node-spyware.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:55-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-23 19:36-0800\n"
+"Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +30,7 @@ msgstr "Web"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:44
 msgid "Block Spyware & Ad URLs"
-msgstr ""
+msgstr "Bloquear Spyware e URLs de anúncios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:59
 msgid "User Bypass"
@@ -54,7 +54,7 @@ msgstr "Cookies"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:83
 msgid "Block Tracking & Ad Cookies"
-msgstr ""
+msgstr "Bloquear monitoramento e cookies de anúncios"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:97
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:133
@@ -68,11 +68,11 @@ msgstr "ActiveX"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:106
 msgid "Block Malware ActiveX Installs"
-msgstr ""
+msgstr "Bloquear instalações de ActiveX de malware"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:119
 msgid "Block All ActiveX"
-msgstr ""
+msgstr "Bloquear todos ActiveX"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:139
 msgid "Traffic"
@@ -80,7 +80,7 @@ msgstr "Tráfego"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:142
 msgid "Monitor Suspicious Traffic"
-msgstr ""
+msgstr "Monitorar tráfego suspeito"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:163
 msgid "Spyware Blocker signatures were last updated"
@@ -272,11 +272,11 @@ msgstr "Aguarde"
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:58
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:69
 msgid "Feature is not installed."
-msgstr ""
+msgstr "O recurso não está instalado."
 
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:78
 msgid "This request has expired."
-msgstr ""
+msgstr "Esta solicitação expirou."
 
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:108
 #, java-format
