--- a/webfilter-base/po/es/untangle-base-webfilter.po
+++ b/webfilter-base/po/es/untangle-base-webfilter.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:18-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-22 07:22-0700\n"
+"Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -74,7 +74,7 @@ msgstr "Permanente y global"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:106
 msgid "Block pages from IP only hosts"
-msgstr ""
+msgstr "Bloquear páginas de hosts cuyo nombre es una dir. IP"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:123
 msgid "Scan HTTPS"
@@ -300,11 +300,11 @@ msgstr "Espere"
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:59
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:69
 msgid "Feature is not installed."
-msgstr ""
+msgstr "La función no está instalada."
 
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:78
 msgid "This request has expired."
-msgstr ""
+msgstr "Esta solicitud ha vencido."
 
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:110
 #, java-format
@@ -351,7 +351,7 @@ msgstr "PASAR"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBase.java:118
 msgid "Passed by policy"
-msgstr "Pasado por póliza"
+msgstr "Pasado por directiva"
 
 #: ../impl/com/untangle/node/webfilter/WebFilterBlockedFilter.java:36
 msgid "Blocked HTTP Traffic"
