--- a/webfilter-base/po/pt_BR/untangle-base-webfilter.po
+++ b/webfilter-base/po/pt_BR/untangle-base-webfilter.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 16:48-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-23 20:14-0800\n"
+"Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -74,7 +74,7 @@ msgstr "Permanente e Global"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:106
 msgid "Block pages from IP only hosts"
-msgstr ""
+msgstr "Bloquear páginas de hosts de IP apenas"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:123
 msgid "Scan HTTPS"
@@ -177,7 +177,7 @@ msgstr "tipo de arquivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:514
 msgid "File Type"
-msgstr "Tipo de Arquivo"
+msgstr "Tipo de arquivo"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-base-webfilter/settings.js:575
 msgid "MIME type"
@@ -300,11 +300,11 @@ msgstr "Aguarde"
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:59
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:69
 msgid "Feature is not installed."
-msgstr ""
+msgstr "O recurso não está instalado."
 
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:78
 msgid "This request has expired."
-msgstr ""
+msgstr "Esta solicitação expirou."
 
 #: ../servlets/webfilter/src/com/untangle/node/webfilter/BlockPageServlet.java:110
 #, java-format
